Made some scripts for moving through start page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>gra w kości</h1>
-        <a href="#" class="to_game_rules">zasady gry</a>
+        <a href="#id_rules" class="to_game_rules" id="id_to_rules">zasady gry</a>
     </header>
 
     <main>
@@ -54,7 +54,7 @@
 
             </section>
 
-            <section class="sect_game_rules">
+            <section class="sect_game_rules" id="id_rules">
 
                 <div class="div_game_rules">
 
