Cleaning in script

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <li>Gracz, który nie został wylosowany jest graczem obstawiającym sumę "oczek na kostkach" w kolejnym rzucie.</li>
                     <li>Obstawianie polega na decyzji, czy kolejny rzut będzie miał większą lub mniejszą wartość. W przypadku komputera decyzja podejmowana jest losowo</li>
                     <li>Jeżeli gracz obstawiający miał rację, dostaje punkt. Jeśli nie, punkt dostaje gracz rzucający kośmi.</li>
+                    <li>Jeżeli suma pierwszego rzutu jest równa sumie drugiego rzutu wówczas nikt nie dostaje punktu.</li>
                     <li>Gracze zamieniają się rolami po zakończonej rundzie.</li>
                     <li>Wygrywa gracz, który po 5 rundach ma więcej punktów.</li>
                     <li>Baw się dobrze! :) </li>
