Work in progress at function checkResultWithDecision.Problem with counting points

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             </section>
 
-            <div class="game_winner" id="msg_winner">zwycięzca: <span id="winner"> </span>
+            <div class="game_winner" id="msg_winner"><span id="winner"> </span>
                 <button id="from_begining" class="from_begining_btn">chcę zagrać jeszcze raz</button>
             </div>
         </div>
